# RawAlchemyCpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Test/: .gitignore  cross_validate.py  cross_validate_jpeg.py  cross_validate_lens.cpp  cross_validate_lens.py  cross_validate_log.py  cross_validate_lut.py
docs/superpowers/plans/: 2026-05-08-submodule-dependency-management.md
docs/superpowers/specs/: 2026-05-08-submodule-dependency-management-design.md  2026-05-09-jpeg-exif-embedding-design.md  2026-05-09-output-color-management-design.md
include/: color_data.h  common.h  exif_injector.h  half_buffer.h  icc_srgb.h  jpeg_writer.h  lens_correction.h  log_transform.h  lut_applier.h  metering.h  raw_alchemy_capi.h  raw_alchemy_export.h  raw_decoder.h  stylize.h  tiff_writer.h
include/raw_alchemy/: color_data.h  jpeg_writer.h  log_transform.h  lut_applier.h  metering.h  raw_decoder.h  stylize.h  tiff_writer.h
scripts/: build_android.sh  build_windows.bat  gen_color_data.py
src/: exif_injector.cpp  jpeg_writer.cpp  lens_correction.cpp  log_transform.cpp  lut_applier.cpp  main.cpp  metering.cpp  raw_alchemy_capi.cpp  raw_decoder.cpp  stylize.cpp  tiff_writer.cpp  verify.cpp
toolchains/: android-arm64.cmake  android-armv7.cmake  android-x86_64.cmake
